<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/delete_player"
        android:title="@string/delete_bin"
        android:icon="@drawable/ic_delete_primary_24dp"
        app:showAsAction="always" />
</menu>