<?xml version="1.0" encoding="utf-8"?>
<Button xmlns:android="http://schemas.android.com/apk/res/android"
    style="?android:attr/buttonBarButtonStyle"
    android:id="@+id/editor_menu_save_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/save_player"
    android:textColor="@color/white"
    android:textSize="14sp">
</Button>