<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/pairings_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_round"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_finish_tournament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_round"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_pause_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/pause_round"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_finish_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/finish_round"
            android:visibility="gone"/>

    </LinearLayout>
</LinearLayout>