...
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/TextAppearance.Pairings.Headline6"
                android:text="Round "/>

            <TextView
                android:id="@+id/toolbar_round_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/TextAppearance.Pairings.Headline6"/>

            <TextView
...
                android:layout_marginLeft="5dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                app:srcCompat="@drawable/ic_baseline_timer_24"/>

            <TextView
                android:id="@+id/toolbar_round_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                style="@style/TextAppearance.Pairings.Headline6"/>

        </com.google.android.material.appbar.MaterialToolbar>
...
