...
    <TextView
        android:id="@+id/available_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/available_count"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/available"
        android:textColor="@color/availableText"
        android:textAppearance="@style/ListHeader"/>

...
    <TextView
        android:id="@+id/enrolled_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="@id/enrolled_count"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/enrolled"
        android:textColor="@color/enrolledText"
        android:textAppearance="@style/ListHeader"/>

...
